Update BG Map due to API fail

--- a/view/draft.html
+++ b/view/draft.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>StoryMapJS: NJUPT Next</title>
+<title>校园景色</title>
 <meta charset="utf-8">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@knightlab" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="NJUPT Next" />
+<meta property="og:title" content="校园景色" />
 <meta property="og:description" content="">
 <meta property="og:url" content="https://uploads.knightlab.com/storymapjs/8dd20b26c7ce6ae67a35603675017061/njupt-next/draft.html" />
 <meta property="og:image" content="https:///staticimg/logos/logo_storymap.png" />
